# modern-ftp-2023

./: LICENSE  README.md  targetOS.txt
Client-FTP-Test/: FtpClient.sln
Client-FTP-Test/FtpClient/: Client.cs  FtpClient.csproj  Program.cs
Client-FTP-Test/FtpClient/EventsArgs/: Connect.cs
Client-FTP-Test/FtpClient/Extensions/: CustomEvent.cs  CustomReader.cs  FtpLogger.cs  JsonTalk.cs
Client-SFTP/: Cargo.toml  build.rs
Client-SFTP-CS/: Client.sln  deleteLater.txt
Client-SFTP-CS/Client/: Client.cs  Client.csproj  Program.cs
Client-SFTP-CS/Client/ClientCore/: CommandsHandler.cs  EventsHandler.cs
Client-SFTP-CS/Client/Extensions/: AliveConnect.cs  CustomEvent.cs  CustomReader.cs  JsonTalk.cs
Client-SFTP-CS/Client/Properties/: AssemblyInfo.cs
Client-SFTP/src/: client.rs  commands.rs  main.rs
Client-SFTP/src/extensions/: events_core.rs  exts.rs  structs.rs
Desktop/: config.js  credits.txt  init.js  package-lock.json  package.json
Desktop/LocalDatabase/: Config.js  Cryptor.js  Database.js  Document.js  index.js
Desktop/MFClient/: Client.js
Desktop/MFClient/Events/: get-directory.js  info-connected.js  invalid.crt.js  log.js  path-exist.js  stats-cpu.js  stats-disk.js  stats-mem.js
Desktop/Translations/: en.js  orv.js  ru.js
Desktop/frontend/elements/: _content.html  init.html  main.html
Desktop/frontend/js/: .preload.js  data.js  extensions.js
Desktop/modules/: Extensions.js  Setuper.js  TrayMenu.js  ipc.js  notify.js  server.js
HostUtil/: Cargo.toml
HostUtil/.cargo/: config.toml
HostUtil/src/: main.rs  system_met.rs
(+37 files in other folders)
